# babel

./: .gitignore  LICENSE  README.md  pyproject.toml
src/babel/: __init__.py  data.py  dims.py  main.py  model.py  optim.py  sharding.py
src/babel/configs/: adamw.py  base.py  gradpower_foom.py  gradpower_off.py  gradpower_on.py  muon.py  polarexp_ns10.py  polarexp_ns3.py  polarexp_ns5.py
src/scripts/: sweep.sh
