[project]
name = "babel"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "lucaslingle", email = "lucasdaxlingle@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "black>=25.1.0",
    "datasets>=3.6.0",
    "flax>=0.10.6",
    "gcsfs>=2025.3.0",
    "jax[tpu]>=0.6.0",
    "orbax-checkpoint @ git+https://github.com/google/orbax/#subdirectory=checkpoint",
    "ml-collections>=1.1.0",
    "transformers>=4.51.3",
    "wandb>=0.19.11",
    "blobfile>=3.0.0",
    "einops>=0.8.1",
]


[project.scripts]
babel = "babel:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch]
metadata.allow-direct-references = true
